--- a/index.html
+++ b/index.html
@@ -1,22 +1,21 @@
 ---
 layout: home
 paginate: true
-alt_title: "Basically Basic"
-sub_title: "Your new default Jekyll theme"
-image: /assets/images/amine-ounnas-180287.jpg
+alt_title: "Django Dev"
+sub_title: "Django 개발자의 개발이야기"
+image: /assets/images/back-ground.jpeg
 introduction: |
-  Basically Basic is a [Jekyll theme](https://jekyllrb.com/docs/themes/) meant as a substitute for the default --- [Minima](https://github.com/jekyll/minima). Conventions and features found there are fully supported by **Basically Basic**, with a few enhancements thrown in for good measure:
+  Django Dev는 기술블로그이자 개발자로서의 성장일기입니다. Python 과 스타트업 개발팀에서 보고 듣고 느낀 것들을 담담히 적어보려합니다. 글들은 아래 읽는이들을 대상으로 쓰였습니다.:
 
-  - Clean responsive design with six customizable skins
-  - Curriculum Vitæ/Resume layout powered by [JSON data](http://registry.jsonresume.org/)
-  - About page layout
-  - Disqus Comments and Google Analytics support
-  - SEO best practices via [Jekyll SEO Tag](https://github.com/jekyll/jekyll-seo-tag/)
+  - 다른 언어를 사용해봤지만 Django 가 궁금한 Django 초보
+  - 스타트업에서 Django 를 사용해서 실제로 서비스를 구축하는 개발자
+  - Agile 프로세스를 도입하는데 어떤 어려움이 있는지 궁금한 팀장님
+  - 인공지능 교육기업의 개발자는 어떤일을 하는지 궁금하신 모든 분
 actions:
-  - label: "Get Started"
+  - label: "Github"
     icon: github
-    url: "https://github.com/mmistakes/jekyll-theme-basically-basic"
-  - label: "Download"
+    url: "https://github.com/parksunwoo"
+  - label: "Linkedin Profile"
     icon: download
-    url: "https://github.com/mmistakes/jekyll-theme-basically-basic/archive/master.zip"
+    url: "www.linkedin.com/in/sunwoo-park-a613aa131"
 ---
