add back ground & mod index.html

--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@ alt_title: "Django Dev"
 sub_title: "Django 개발자의 개발이야기"
 image: /assets/images/back-ground.jpeg
 introduction: |
-  Django Dev는 기술블로그이자 개발자로서의 성장일기입니다. Python 과 스타트업 개발팀에서 보고 듣고 느낀 것들을 담담히 적어보려합니다. 글들은 아래 읽는이들을 대상으로 쓰였습니다.:
+  Django Dev는 기술블로그이자 개발자로서의 성장일기입니다. Django 과 스타트업 개발팀에서 보고 듣고 느낀 것들을 담담히 적어보려합니다. 글들은 아래 읽는이들을 대상으로 쓰였습니다:
 
   - 다른 언어를 사용해봤지만 Django 가 궁금한 Django 초보
-  - 스타트업에서 Django 를 사용해서 실제로 서비스를 구축하는 개발자
-  - Agile 프로세스를 도입하는데 어떤 어려움이 있는지 궁금한 팀장님
-  - 인공지능 교육기업의 개발자는 어떤일을 하는지 궁금하신 모든 분
+  - 스타트업에서 Django 를 사용해서 실제로 서비스를 구축하는 Back-end 개발자
+  - Agile 프로세스를 도입하는데 어떤 어려움이 있는지 미리 알고싶은 팀장님
+  - 인공지능 교육기업의 개발자는 어떤 생각을 하는지 훔쳐보고싶은 모든 분!
 actions:
   - label: "Github"
     icon: github
     url: "https://github.com/parksunwoo"
-  - label: "Linkedin Profile"
-    icon: download
-    url: "www.linkedin.com/in/sunwoo-park-a613aa131"
+  - label: "Linkedin"
+    icon: linkedin
+    url: "https://www.linkedin.com/in/sunwoo-park-a613aa131"
 ---
