--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: home
 paginate: true
 alt_title: "Django Dev"
 sub_title: "Django 개발자의 개발이야기"
-image: /assets/images/back-ground.jpeg
+image: /assets/images/amine-ounnas-180287.jpg
 introduction: |
   Django 와 스타트업 개발팀에서 보고 듣고 느낀 것들을 담담히 적어보려합니다.
 
