mod logo, image

--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 ---
 layout: home
 paginate: true
-alt_title: "Django Dev"
-sub_title: "Django 개발자의 개발이야기"
+alt_title: "Read the world Write code"
+sub_title: "어느 프로그래머의 기록"
 image: /assets/images/amine-ounnas-180287.jpg
 introduction: |
-  Django 와 스타트업 개발팀에서 보고 듣고 느낀 것들을 담담히 적어보려합니다.
+  Python과 Django 로 오늘도 코드를 작성중입니다.
 
 actions:
   - label: "Github"
