--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 layout: home
 paginate: true
 alt_title: "Read the world Write code"
-sub_title: "어느 프로그래머의 기록"
+sub_title: "세상을 읽고 코드로 쓰다"
 image: /assets/images/amine-ounnas-180287.jpg
 introduction: |
-  Python과 Django 로 오늘도 코드를 작성중입니다.
+  어느 프로그래머의 기록
 
 actions:
   - label: "Github"
