--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: home
 paginate: true
 alt_title: "Read the world Write code"
-sub_title: "세상을 읽다 코드를 쓰다"
+sub_title: "세상을 읽다 코드로 쓰다"
 image: /assets/images/amine-ounnas-180287.jpg
 introduction: |
   어느 프로그래머의 기록
