--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 ---
 layout: home
 paginate: true
-alt_title: "Read the world Write code"
-sub_title: "세상을 읽다 코드로 쓰다"
-image: /assets/images/amine-ounnas-180287.jpg
+alt_title: "개발자 박선우의 노트"
+sub_title: "A blog about Dev, ML, Code"
+image: /assets/images/bg_camerata.png
 introduction: |
-  어느 프로그래머의 기록
+  .
 
 actions:
   - label: "Github"
