--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 ---
 layout: home
 paginate: true
-alt_title: "개발자 박선우의 노트"
-sub_title: "A blog about Dev, ML, Code"
+alt_title: "Engineer's Notes"
+sub_title: "Talking about Dev, ML, and Code"
 image: /assets/images/bg_camerata.png
 introduction: |
   .
