--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: home
 paginate: true
-alt_title: "Engineer's Notes"
+alt_title: "A Engineer's Notes"
 sub_title: "Talking about Dev, ML, and Code"
 image: /assets/images/bg_camerata.png
 introduction: |
