--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: home
 paginate: true
 alt_title: "A Engineer's Notes"
 sub_title: "Talking about Dev, ML, and Code"
-image: /assets/images/bg_camerata.png
+image: /assets/images/bg-camerata.webp
 introduction: |
   .
 
